--- a/style.css
+++ b/style.css
@@ -1,204 +1,196 @@
 @import url('https://fonts.googleapis.com/css?family=Russo+One');
-* {
-  box-sizing: border-box;
-  
+body {
+  font-family: Russo One;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background: #fba2ad;
-  margin: 10px 0;
- 
+  user-select: none;
+  background-color: #8d8d8d;
 }
 
-.colorScheme,
-.previewWrap,
-.editorWrap textarea {
-  background-color: #f3cad3;
-  border: 1px solid #dda9f0;
-  box-shadow: 1px 1px 10px 2px #b892c66d;
-  border-top: none;
-  border-radius: 15px;
- 
-}
-
-.toolbar {
+#root {
   display: flex;
+  justify-content: center;
   align-items: center;
-  background-color: #cba1d5;
-  padding: 0.3rem;
-  border: 1px solid #7d817b;
-  box-shadow: 1px 1px 10px 2px #e48a98;
-  font-family: Russo One;
-  font-size: 1rem;
-  color: black;
-  border-radius: 20px;
-}
-.toolbar i {
-  width: 25px;
-  margin-left: 5px;
-  border-radius: 20px;
-
-}
-.toolbar .fa-arrows-alt,
-.toolbar .fa-compress {
-  margin-left: auto;
-  border-radius: 15px;
+  height: 100vh;
 }
 
-.fa-retweet:hover,
-.fa-compress:hover,
-.fa-arrows-alt:hover {
-  color: #c4e25711;
+.inner-container {
+  outline: 5px solid rgb(255, 255, 255);
+  position: relative;
+  width: 660px;
+  text-align: center;
+  background-color: hsl(206, 9%, 51%);
+  border-radius: 40px;
+}
+.inner-container .pad-bank {
+  width: 332px;
+  height: 272px;
+  display: inline-block;
+  margin: 20px;
+  border-radius: 50px;
+}
+
+.inner-container .pad-bank .drum-pad {
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 80px;
+  margin-right: 10px;
+  border-radius: 20px;
+  padding-top: 35px;
+  box-sizing: border-box;
+  cursor: pointer;
+
+}
+.inner-container .logo {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border-radius: 14px;
+  
+}
+.inner-container .logo .inner-logo {
+  font-size: 14px;
+}
+.inner-container .controls-container {
+  width: 240px;
+  height: 272px;
+  display: inline-block;
+  margin: 40px 20px 0 10px;
+  vertical-align: top;
+}
+.inner-container .controls-container .control {
+  width: 100px;
+  margin: auto;
+}
+.inner-container .controls-container .control p {
+  margin-bottom: 0;
+}
+.inner-container .controls-container #display {
+  width: 200px;
+  background-color: #8a95a1;
+  margin: 15px auto;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.outer-select,
+.inner-container .controls-container .control .select {
+  margin: auto;
+  border: 1px solid black;
+  width: 50px;
+  height: 20px;
+  padding: 1px;
+  background-color: black;
+}
+
+.inner-select,
+.inner-container .controls-container .control .select .inner {
+  width: 23px;
+  height: 19px;
+  background: rgb(231, 231, 232);
+  border: 1px solid black;
+  box-sizing: border-box;
   cursor: pointer;
 }
 
-.fa-free-code-camp {
-  margin-right: 3px;
-}
-
-.editorWrap {
-  max-width: 600px;
-  margin: 1.125rem auto;
-}
-.editorWrap .toolbar {
-  width: 99%;
-}
-.editorWrap textarea {
-  width: 99%;
-  min-height: 200px;
-  margin-bottom: -5px;
-  resize: vertical;
-  outline: none;
-  padding-left: 5px;
-  padding-top: 5px;
-  font-size: 0.875rem;
-  overflow: auto;
-}
-
-.converter {
-  width: 100px;
-  text-align: center;
-  font-size: 35px;
-  margin: auto;
-}
-
-.previewWrap {
-  max-width: 800px;
-  margin: 1.25rem auto;
-  min-height: 200px;
-  overflow-wrap: break-word;
-  border-radius: 15px;
-  overflow: auto ;
-}
-
-@media screen and (max-width: 850px) {
-  .previewWrap {
-    max-width: 630px;
-  }
-
-  .editorWrap {
-    max-width: 550px;
-  }
-}
-.maximized {
-  width: 96%;
-  min-height: 100vh;
-  margin: auto;
-}
-.maximized textarea {
-  min-height: 95vh;
-  resize: none;
-}
-
-.hide {
-  display: none;
-}
-
 @media screen and (max-width: 650px) {
-  body {
-    margin: 5px 0;
-  }
-
-  .editorWrap {
-    width: 80vw;
-    margin: 0 auto;
-  }
-
-  .maximized {
-    width: 95%;
-    margin: auto;
-  }
-
-  .previewWrap {
-    width: 90vw;
+  .inner-container {
+    transform: scale(0.7);
   }
 }
-#preview {
-  padding: 0 1rem;
+[type='range'] {
+  appearance: none;
+  margin: 12.5px 0;
+  width: 100%;
 }
-#preview blockquote {
-  border-left: 3px solid #71a3e9;
-  color: #f1f6f6;
-  padding-left: 8px;
-  margin-left: 25px;
-  font-family: Sans serif ;
+[type='range']:focus {
+  outline: none;
 }
-#preview > p > code {
-  padding: 3px;
+[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 2px 2px 2px #222, 0 0 2px #2f2f2f;
+  background: #424242;
+  border: 1px solid #000;
+  border-radius: 0;
 }
-#preview code {
-  background: white;
-  font-size: 0.875rem;
-  font-weight: bold;
-  
+[type='range']::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #111, 0 0 1px #1e1e1e;
+  border: 0 solid #fff;
+  height: 25px;
+  width: 8px;
+  border-radius: 0;
+  background: rgb(249, 249, 252);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -11px;
 }
-#preview pre {
-  display: block;
-  overflow: auto;
-  background: white;
-  padding: 5px;
-  line-height: 1.2;
+[type='range']:focus::-webkit-slider-runnable-track {
+  background: #4f4f4f;
 }
-#preview h1 {
-  border-bottom: 2px solid #224b4b;
+[type='range']::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 2px 2px 2px #222, 0 0 2px #2f2f2f;
+  background: #424242;
+  border: 1px solid #000;
+  border-radius: 0;
 }
-#preview h2 {
-  border-bottom: 1px solid #224b4b;
+[type='range']::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #111, 0 0 1px #1e1e1e;
+  border: 0 solid #fff;
+  height: 25px;
+  width: 8px;
+  border-radius: 0;
+  background: rgb(181, 62, 62);
+  cursor: pointer;
 }
-#preview table {
-  border-collapse: collapse;
+[type='range']::-ms-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  background: transparent;
+  border-color: transparent;
+  border-width: 8px 0;
+  color: transparent;
 }
-#preview td{
-    border: 2px solid #0a0b0b;
-  padding-left: 5px;
-  padding-right: 5px;
-  text-align: center;
-  color: #131313;
+[type='range']::-ms-fill-lower {
+  box-shadow: 2px 2px 2px #222, 0 0 2px #2f2f2f;
+  background: #353535;
+  border: 1px solid #000;
+  border-radius: 0;
 }
-#preview th {
-  border: 2px solid #eef4f4;
-  padding-left: 5px;
-  padding-right: 5px;
-  text-align: center;
-  color: #71a3e9;//heade
+[type='range']::-ms-fill-upper {
+  box-shadow: 2px 2px 2px #222, 0 0 2px #2f2f2f;
+  background: #424242;
+  border: 1px solid #000;
+  border-radius: 0;
 }
-#preview img {
-  display: block;
-  max-width: 90%;
-  margin: 2rem auto;
-  align-items: center;
+[type='range']::-ms-thumb {
+  box-shadow: 1px 1px 1px #111, 0 0 1px #1e1e1e;
+  border: 0 solid #fff;
+  height: 25px;
+  width: 8px;
+  border-radius: 0;
+  background: rgb(209, 209, 214);
+  cursor: pointer;
 }
-
-@media screen and (max-width: 420px) {
-  body {
-    font-size: 0.875rem;
-  }
+[type='range']:focus::-ms-fill-lower {
+  background: #7b7474;
+}
+[type='range']:focus::-ms-fill-upper {
+  background: #d87d7d;
+}
+.drum-pad:active {
+  transform: translate(4px,4px)
+}
+.controls-container:active{
+  transform: translate3d(4px,5px,4px);
 }
